# psycology_dict_parser

./: .gitignore  config.py  interfaces.py  main.py  parser.py  pyproject.toml
