[tool.poetry]
name = "psycology-dict-parser"
version = "0.1.0"
description = "Psycology words parser"
authors = ["SaD-Pr0gEr <sad.pr0ger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
